# clickhouse-example

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/routers/: analytics.py  dimensions.py
migrations/: 001_create_schema.sql  002_insert_data.sql
scripts/: migrate.py
