[project]
name = "clickhouse-olap-demo"
version = "0.1.0"
description = "Educational real-time OLAP system — FastAPI + ClickHouse (DDIA star schema)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "clickhouse-connect>=0.7.0",
    "pandas>=2.2.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.0",
]
